# cpp_template

./: .gitignore  CMakeLists.txt  README.md  cmake_gitsub.hpp  cookie.cpp  main.cpp
tests/: test_addition.cpp
